package io.github.tttol.mrls.form;

public record UserForm(int id, String username, String name, String state, String avatarUrl, String webUrl) {
}
